# SDL3CLAY_renderer

./: .gitignore  CMakeLists.txt
src/: appstate.c  appstate.h  main.c
src/common/: arena.c  arena.h  error_handling.h  memory_leak.c  memory_leak.h  uuid.c  uuid.h
src/renderer/: SDL3CLAY.c  SDL3CLAY.h  clay_renderer_SDL3.c  clay_renderer_SDL3.h
src/ui/: colors.c  colors.h  components.c  components.h  screen1.c  screen1.h  screen_manager.c  screen_manager.h  screen_profile.c  screen_profile.h
src/ui/components/: component_debug_button.c  component_debug_button.h  component_profile.c  component_profile.h  component_sidebar_item.c  component_sidebar_item.h
src/ui/screens/: screen_main.c  screen_main.h  screen_profile.c  screen_profile.h  screen_test_1.c  screen_test_1.h  screen_test_2.c  screen_test_2.h  screen_test_3.c  screen_test_3.h
